--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{
+html{
     background-image: url("bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -7,4 +7,13 @@ header{
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
     text-align: center;
+    padding: 5px;
+    margin: auto;
+    font-size: large;
+}
+body{
+    background-color: rgba(0, 0, 0, 0.7);
+}
+#RefOB{
+    background-color: rgba(0, 0, 0, 0.7);
 }
